<resources>
    <string name="app_name">AndroidSteganography</string>
    <string name="encode">Encode</string>
    <string name="decode">Decode</string>
    <string name="choose_image">Choose Image</string>
    <string name="secret_key">Secret Key -</string>
    <string name="message">Message -</string>
    <string name="your_message">Your message</string>
    <string name="enter_secret_key">Enter secret key</string>
    <string name="save_image">Save Image</string>
    <string name="enter_message">Enter message</string>
    <string name="key_name">Key name</string>
    <string name="save">Save</string>
    <string name="edit_key">Edit key</string>
    <string name="manage_keys">Manage Keys</string>
    <string name="add_key">Add key</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="filename">Filename</string>
    <string name="filename_text">Filename -</string>
</resources>