<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/choose_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="Choose Image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_image_button"
        android:layout_marginTop="45dp"
        android:layout_toStartOf="@+id/choose_image_button"
        android:text="@string/message"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/message"
        android:layout_marginTop="35dp"
        android:text="@string/secret_key"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="16sp"
        android:textStyle="bold" />



    <EditText
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/secret_key"
        android:layout_alignTop="@+id/textView"
        android:ems="10"
        android:hint="@string/enter_message"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/secret_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/enter_secret_key"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <Button
        android:id="@+id/choose_secret_key_button"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:drawableLeft="@drawable/ic_open_key_list"
        />

    <ListView
        android:id="@+id/key_list_view"
        android:translationZ="90dp"
        android:background="@android:color/background_light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <Button
        android:id="@+id/encode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="17dp"
        android:layout_toStartOf="@+id/secret_key"
        android:text="@string/encode"
        android:textAlignment="center"
        android:textSize="14dp" />



    <Button
        android:id="@+id/save_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/secret_key"
        android:layout_alignTop="@+id/encode_button"
        android:layout_marginEnd="36dp"
        android:text="@string/save_image" />

    <TextView
        android:id="@+id/whether_encoded"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textStyle="bold" />

</RelativeLayout>